create sequence roles_seq start with 1 increment by 50;
create sequence specializations_seq start with 1 increment by 50;
create table appointments (created_at timestamp(6), doctor_id bigint, id bigint generated by default as identity, patient_id bigint, slot_id bigint unique, updated_at timestamp(6), reason TEXT, status varchar(255) check (status in ('SCHEDULED','CONFIRMED','CANCELLED','COMPLETED')), type varchar(255) check (type in ('CONSULTATION','FOLLOW_UP','EMERGENCY')), primary key (id));
create table availabilities (availability_date date not null, repeat_until date, created_at timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), user_id bigint not null, primary key (id));
create table clinics (created_at timestamp(6), id bigint generated by default as identity, user_id bigint, phone_number varchar(13), address varchar(2552), city varchar(255), name varchar(255), postal_code varchar(255), primary key (id));
create table patient_medical_profiles (height float4, is_smoking boolean, weight float4, id bigint generated by default as identity, user_id bigint unique, gender varchar(10) check (gender in ('MALE','FEMALE')), identifiant_1 varchar(255), primary key (id));
create table plans (created_at timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), description TEXT, name varchar(255), plan_period_id varchar(255), type varchar(255) check (type in ('FREE','BASIC','PREMIUM')), primary key (id));
create table prescriptions (date timestamp(6), id bigint generated by default as identity, report_id bigint, details varchar(254), note TEXT, prescription_type varchar(255) check (prescription_type in ('MEDICATION','TREATMENT','TEST','REFERRAL')), primary key (id));
create table reports (appointment_id bigint, clinic_id bigint, created_at timestamp(6), date timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), user_id bigint, diagnostic varchar(254), label varchar(254), report_file varchar(255), report_status varchar(255), report_type varchar(255), primary key (id));
create table reviews (rating integer, appointment_id bigint, doctor_id bigint, id bigint generated by default as identity, patient_id bigint, review_date timestamp(6), comment TEXT, primary key (id));
create table roles (id integer not null, created_at timestamp(6), updated_at timestamp(6), description varchar(255), name varchar(255) not null unique check (name in ('PATIENT','ADMIN','DOCTOR','OPERATOR','SUPER_ADMIN')), primary key (id));
create table schedule_slots (from_time time(6), is_active boolean, is_booked boolean not null, slot_date date not null, to_time time(6), appointment_id bigint unique, created_at timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), week_day_id bigint, primary key (id));
create table specializations (created_at timestamp(6), id bigint not null, updated_at timestamp(6), description TEXT, name varchar(255), primary key (id));
create table subscriptions (created_at timestamp(6), end_date timestamp(6), id bigint generated by default as identity, plan_id bigint, start_date timestamp(6), updated_at timestamp(6), user_id bigint, subscription_status varchar(255), subscription_type varchar(255), primary key (id));
create table user_roles (role_id integer not null, user_id bigint not null);
create table users (birth_date date, gender boolean, is_active boolean, clinic_id bigint, created_at timestamp(6), id bigint generated by default as identity, specialization_id bigint, updated_at timestamp(6), npi varchar(11), health_assurance_number varchar(13), phone_number varchar(13), credit varchar(50), first_name varchar(100), last_name varchar(100), address varchar(255), email varchar(255) unique, stripe_customer_id varchar(255), primary key (id));
create table weekdays (from_time time(6) not null, slot_duration integer not null check (slot_duration>=10), to_time time(6) not null, availability_id bigint, id bigint generated by default as identity, days_of_week varchar(255) not null check (days_of_week in ('MONDAY','TUESDAY','WEDNESDAY','THURSDAY','FRIDAY','SATURDAY','SUNDAY')), primary key (id));
alter table if exists appointments add constraint FK6u6s6egu60m2cbdjno44jbipa foreign key (doctor_id) references users;
alter table if exists appointments add constraint FKopb2h9yhin1rb4dqote8bws6w foreign key (patient_id) references users;
alter table if exists appointments add constraint FK3petofhow1uh1ibniq01x1du5 foreign key (slot_id) references schedule_slots;
alter table if exists availabilities add constraint FKr12nckjwkci4pi0cynhaifbkk foreign key (user_id) references users;
alter table if exists clinics add constraint FKodveftlivd3s66ijx5v9idymg foreign key (user_id) references users;
alter table if exists patient_medical_profiles add constraint FKnnlq3rcbnt5n1y929r55udout foreign key (user_id) references users;
alter table if exists prescriptions add constraint FKacj2dbuq8u9cqt88korhuygyr foreign key (report_id) references reports;
alter table if exists reports add constraint FKg9p442h7ngqji0jx333pep1wy foreign key (appointment_id) references appointments;
alter table if exists reports add constraint FK9xhh4qul5ellyxvwrh9konxww foreign key (clinic_id) references clinics;
alter table if exists reports add constraint FK2o32rer9hfweeylg7x8ut8rj2 foreign key (user_id) references users;
alter table if exists reviews add constraint FKfhaj6kqx2pjpn6eambt0pa1nm foreign key (appointment_id) references appointments;
alter table if exists reviews add constraint FKmtd4ungrr68jpndc5gf67827v foreign key (doctor_id) references users;
alter table if exists reviews add constraint FKp6ff3lit060ehcuyc5artangi foreign key (patient_id) references users;
alter table if exists schedule_slots add constraint FKmkcrmnf1s6kg4kfldp2jedo89 foreign key (appointment_id) references appointments;
alter table if exists schedule_slots add constraint FK98asjhf87bb4ohyypq9sj6b07 foreign key (week_day_id) references weekdays;
alter table if exists subscriptions add constraint FKb1uf5qnxi6uj95se8ykydntl1 foreign key (plan_id) references plans;
alter table if exists subscriptions add constraint FKhro52ohfqfbay9774bev0qinr foreign key (user_id) references users;
alter table if exists user_roles add constraint FKh8ciramu9cc9q3qcqiv4ue8a6 foreign key (role_id) references roles;
alter table if exists user_roles add constraint FKhfh9dx7w3ubf1co1vdev94g3f foreign key (user_id) references users;
alter table if exists users add constraint FKdtr2ppiyhryd53ovem6c4ehp1 foreign key (clinic_id) references clinics;
alter table if exists users add constraint FKdr5joptqk3x0b8sqo5xtq31dw foreign key (specialization_id) references specializations;
alter table if exists weekdays add constraint FKjee9l18okloov7w584n14pg1o foreign key (availability_id) references availabilities;
