package com.homosapiens.diagnocareservice.dto;

import lombok.Data;

@Data
public class UrgentDiseaseDTO {
    private Long id;
    private String diseaseName;
}
