package com.homosapiens.diagnocareservice.model.entity.enums;

public enum CheckInOutcome {
    IMPROVING,
    STABLE,
    WORSENING
}
