package com.homosapiens.diagnocareservice.model.entity.enums;

public enum CheckInStatus {
    PENDING,
    SENT_24H,
    SENT_48H,
    COMPLETED
}
