package com.homosapiens.diagnocareservice.model.entity.enums;

public enum GenderEnum {
    MALE,
    FEMALE,
}
